client/static/css/results.css
/*
 * Results
 */

.results-text-larger {
    font-size: 150%;
}

.chart-container {
    width: 500px;
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
}

.show-all .for-valid {
    opacity: 40%;
}

/*
 * Lists
 */

.short-result-list {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    margin-bottom: 4em;
    margin-top: 1em;
}

p+.short-result-list {
    margin-top: 3em;
}

.short-result-list-item {
    display: inline-flex;
    margin: 0.25em 2em;
    align-items: center;
}

.short-result-list-candidate {
    width: 10em;
}

.short-result-list-value {
    width: 8em;
    font-size: 14pt;
    text-align: right;

}

.short-result-list-value.longer {
    width: auto;
}

.result-positive {
    color: #12b012;
}

.result-negative {
    color: #f32424;
}

.result-if-needed {
    color: orange;
}

.result-main {
    font-weight: bold;
}

.emoji-result-list {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.emoji-result-pair {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.emoji-result-symbol {
    display: inline-block;
    font-size: 120%;
    width: 2.5em;
    text-align: center;
    padding: 0.2em 0 0.3em 0;
}

.emoji-result-count {
    display: inline-block;
    width: 2em;
    color: gray;
    font-size: 70%;
    text-align: center;
}

